--- a/ComedyHackDay/app/src/main/res/layout/content_launcher.xml
+++ b/ComedyHackDay/app/src/main/res/layout/content_launcher.xml
@@ -3,16 +3,32 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:orientation="vertical"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
-    android:id="@+id/fragment_display"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    android:layout_height="match_parent"
     tools:context=".LauncherActivity"
     tools:showIn="@layout/activity_launcher">
 
+    <LinearLayout
+        android:id="@+id/fragment_display"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight=".5"
+        android:orientation="vertical"
+        tools:context=".LauncherActivity"
+        tools:showIn="@layout/activity_launcher"></LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/compass_display"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight=".5"
+        android:background="@color/com_facebook_blue"
+        android:orientation="vertical"
+        ></LinearLayout>
 
 </LinearLayout>
