--- a/ComedyHackDay/app/src/main/res/layout/question_card.xml
+++ b/ComedyHackDay/app/src/main/res/layout/question_card.xml
@@ -9,15 +9,21 @@
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="35dp"
+        android:layout_height="50dp"
         android:layout_gravity="center"
         card_view:cardCornerRadius="2dp">
         <TextView
             android:gravity="center"
             android:textSize="20dp"
+            android:lines="2"
             android:id="@+id/question_text"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+
+        <ScrollView
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></ScrollView>
     </android.support.v7.widget.CardView>
 
     <View
