--- a/ComedyHackDay/app/src/main/res/layout/question_card.xml
+++ b/ComedyHackDay/app/src/main/res/layout/question_card.xml
@@ -6,11 +6,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
     <!-- A CardView that contains a TextView -->
-    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:animateLayoutChanges="true"
         card_view:cardCornerRadius="2dp">
         <TextView
             android:gravity="center"
@@ -18,7 +20,7 @@
             android:lines="2"
             android:id="@+id/question_text"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="50dp" />
 
         <ScrollView
             android:visibility="gone"
