--- a/ComedyHackDay/app/src/main/res/layout/question_card.xml
+++ b/ComedyHackDay/app/src/main/res/layout/question_card.xml
@@ -6,30 +6,47 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
     <!-- A CardView that contains a TextView -->
-    <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:animateLayoutChanges="true"
         card_view:cardCornerRadius="2dp">
-        <TextView
-            android:gravity="center"
-            android:textSize="20dp"
-            android:lines="2"
-            android:id="@+id/question_text"
-            android:layout_width="match_parent"
-            android:layout_height="50dp" />
 
-        <ScrollView
-            android:visibility="gone"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"></ScrollView>
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/question_text"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:gravity="center"
+                android:lines="2"
+                android:textSize="20dp" />
+
+            <ScrollView
+                android:id="@+id/answers_scroll"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:visibility="gone">
+
+                <LinearLayout
+                    android:id="@+id/answersHolder"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+
+                </LinearLayout>
+            </ScrollView>
+        </LinearLayout>
     </android.support.v7.widget.CardView>
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="2dp"/>
+        android:layout_height="2dp" />
 
 </LinearLayout>
