--- a/ComedyHackDay/app/src/main/res/layout/question_card.xml
+++ b/ComedyHackDay/app/src/main/res/layout/question_card.xml
@@ -24,13 +24,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:gravity="center"
+                android:textStyle="bold"
                 android:lines="2"
                 android:textSize="20dp" />
+
+            <View
+                android:id="@+id/dividing_line"
+                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/dividing_line">
+            </View>
 
             <ScrollView
                 android:id="@+id/answers_scroll"
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
+                android:layout_height="100dp"
                 android:visibility="gone">
 
                 <LinearLayout
@@ -38,8 +47,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
-
-
                 </LinearLayout>
             </ScrollView>
         </LinearLayout>
