--- a/ComedyHackDay/app/src/main/res/layout/answer_text_view.xml
+++ b/ComedyHackDay/app/src/main/res/layout/answer_text_view.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<Button xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/answerTextBox"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
