--- a/ComedyHackDay/app/src/main/res/layout/question_card.xml
+++ b/ComedyHackDay/app/src/main/res/layout/question_card.xml
@@ -22,9 +22,8 @@
             <TextView
                 android:id="@+id/question_text"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="wrap_content"
                 android:gravity="center"
-                android:lines="2"
                 android:textSize="20dp"
                 android:textStyle="bold" />
 
