--- a/ComedyHackDay/app/src/main/res/layout/answer_text_view.xml
+++ b/ComedyHackDay/app/src/main/res/layout/answer_text_view.xml
@@ -5,4 +5,5 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
+    android:elevation="2dp"
     android:textSize="25dp" />
