--- a/ComedyHackDay/app/src/main/res/layout/location_card.xml
+++ b/ComedyHackDay/app/src/main/res/layout/location_card.xml
@@ -10,6 +10,7 @@
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="35dp"
+        card_view:cardUseCompatPadding="true"
         android:layout_gravity="center"
         card_view:cardCornerRadius="2dp">
         <TextView
