--- a/ComedyHackDay/app/src/main/res/layout/questions_layout.xml
+++ b/ComedyHackDay/app/src/main/res/layout/questions_layout.xml
@@ -10,12 +10,43 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"/>
-    <waggoner.com.comedyhackday.view.CompassView
-        android:id="@+id/compass_view"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        app:degree="40.0"
-        app:drawable="@android:drawable/ic_menu_compass"/>
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:text="@string/give_a_fuck"/>
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_weight="1"
+            android:layout_gravity="center_horizontal">
+            <ImageView
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:src="@drawable/compass_bottom"
+                android:layout_gravity="center_horizontal|center_vertical"/>
+            <waggoner.com.comedyhackday.view.CompassView
+                android:id="@+id/compass_view"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_weight="1"
+                app:degree="40.0"
+                android:background="@android:color/transparent"
+                android:src="@drawable/compass_top"
+                android:layout_gravity="center_horizontal|center_vertical"/>
+        </FrameLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:text="@string/no_fucks_given"/>
+    </LinearLayout>
 
 </LinearLayout>
