--- a/ComedyHackDay/app/src/main/res/layout/questions_layout.xml
+++ b/ComedyHackDay/app/src/main/res/layout/questions_layout.xml
@@ -9,7 +9,8 @@
         android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:layout_marginBottom="10dp"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -20,6 +21,8 @@
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:textStyle="bold"
+            android:textSize="30sp"
+            android:fontFamily="sans-serif-medium"
             android:text="@string/give_a_fuck"/>
         <FrameLayout
             android:layout_width="match_parent"
@@ -45,7 +48,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
+            android:textAllCaps="false"
             android:textStyle="bold"
+            android:textSize="30sp"
+            android:fontFamily="sans-serif-medium"
             android:text="@string/no_fucks_given"/>
     </LinearLayout>
 
