--- a/ComedyHackDay/app/src/main/res/layout/answer_text_view.xml
+++ b/ComedyHackDay/app/src/main/res/layout/answer_text_view.xml
@@ -6,4 +6,5 @@
     android:layout_height="wrap_content"
     android:gravity="center"
     android:elevation="2dp"
-    android:textSize="25dp" />
+    android:textAllCaps="false"
+    android:textSize="15dp" />
